[package]
name = "crypto"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { version = "0.4.0", default-features = false }
ark-secp256k1 = "0.4"
bincode = "1.3"
bitcoin_hashes = "0.9"
ethnum = { version = "1.4", features = ["macros"] }
hex = "0.4"
hmac = "0.7"
libsecp256k1 = "0.7"
pbkdf2 = "0.3"
rand = "0.8"
rocksdb = "0.21"
rust-crypto = "0.2.36"
scrypt = { version = "0.2", default-features = false }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sha2 = "0.8.0"
thiserror = "1.0"
tiny-bip39 = "1.0"
tiny-hderive = "0.3"
tiny-keccak = "1.4"
